<?xml version="1.0"?>
<package format="2">
  <name>ramp_apriltag_detector</name>
  <version>1.1.0</version>
  <description>Detector for apriltags for RAMP</description>

  <license>BSD</license>

  <maintainer email="mitch@robots.ox.ac.uk">Alexander Mitchell</maintainer>
  <maintainer email="kaye@robots.ox.ac.uk">Ben Kaye</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>apriltag</exec_depend>
  <exec_depend>apriltag_ros</exec_depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>

</package>
